# yt-transcriber

./: .env  README.md  pyproject.toml
src/: download.py  main.py  setup.py  summarize.py  transcript.py  utils.py
summaries/: Python Tutorial - Argparse.txt
transcriptions/: Python Tutorial - Argparse.txt
