[project]
name = "speech-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "matplotlib>=3.10.3",
    "openai>=1.82.0",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "yt-dlp>=2025.5.22",
]
